2013-12-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (valForStructElem): fixed bug 2122

2013-12-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (setDefaultOptions): start xdata at 1 by default, fixes bug 2173
	* src/SDCCast.c (decorateType, RETURN): error on returning void expression
	  when not using sdcc extensions	
	* src/stm8/gen.c (genReturn): accept returning void, fixes bug 2158
	* support/regression/tests/gcc-torture-execute-20000314-3.c: reintroduced

2013-12-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (aopGet): fixed for remat non-generic pointers,
	  (genPointerGet, genPointerSet): remat all cast remat pointers
	* src/mcs51/ralloc.c (packRegisters): remat all cast of remat ptr
	* src/SDCCast.c (decorateType, CAST): fix bug 2133, array==pointer
	* src/SDCCmain.c: cosmetics
	* src/SDCCsymt.h: reordered DECLARATOR_TYPE
	* support/regression/tests/bug-2133.c: new, added
	* support/regression/tests/gcc-torture-execute-20021010-2.c,
	* support/regression/tests/gcc-torture-execute-20041112-1.c,
	* support/regression/tests/gcc-torture-execute-960116-1.c,
	* support/regression/tests/staticinit.c: fixed warnings

2013-12-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.c,
	* src/SDCCerr.h: added W_UNRECOGNIZED_ASM
	* src/SDCCglobl.h,
	* src/z80/gen.c: cosmetics
	* src/SDCCpeeph.c (StrStr): added
	  (pcDistance): largest instruction on any target is 4 bytes?
	* src/z80/peep.c (ISINST): use STRNCASECMP,
	  (argCont): use StrStr,
	  (z80instructionSize): use STRNCASECMP, W_UNRECOGNIZED_ASM,
	   fixed some bugs, return 999 when unrecognized
	* support/regression/tests/bug-2222.c: removed memset and un
	* support/regression/tests/gcc-torture-execute-20040313-1.c: enabled for all
	  targets with reduced footprint

2013-12-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Document subw uses that can be enabled once bug #2227 is fixed.